--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'AWS EC2 Instance State Action'
+description: 'Starts, stop, terminates, and reboots EC2 instances'
+author: 'TrueMark'
 inputs:
   instance-ids:
     required: true
